@@ -1,3 +1,8 @@
+KThinkBat HEAD:
+   * typo in About box
+   * added spanish traslation provided by Luis Guillermo Soblavarro
+   * added some more info to the ToolTip
+
 KThinkBat 0.16 - 23 Jul 2006:
    * ToolTip with (later more detailed) battery information
    * more code documentation
